store/src/styles/components/kiosk.scss
/* ... */
.hern-kiosk__modifier-category-option {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 1em 0;
   .hern-kiosk__modifier-category-right {
      display: flex;
      align-items: center;
   }
}
.hern-kiosk__modifier-category-option-image {
   width: 92px;
   height: 92px;
}
.hern-kiosk__modifier--option-name {
   margin-left: 1em;
}
.hern-kiosk__modifier-popup-footer {
   display: flex;
   margin: 2em;
   justify-content: space-between;
   align-items: center;
}
.hern-kiosk__modifier-add-to-cart {
   padding: 1em;
   font-weight: 700;
   font-size: 1.5em;
   border-radius: 0.5em;
   // margin: 0 2em;
   justify-content: space-between;
   align-items: center;
   width: 20em;
}
.hern-kiosk__modifier--option-name {
   margin-left: 1em;
   font-size: 2em;
   font-weight: bold;
   color: #ffffff;
}
.hern-kiosk__modifier-total-label {
   font-size: 2em;
   font-weight: bold;
   text-transform: capitalize;
}
.hern-kiosk__modifier-total-price {
   margin: 0 1em;
   color: #ffffff;
   font-size: 2em;
}

// kiosk cart screen
.hern-kiosk__cart-section-header {
   height: 8em;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background: #ffffff;
   padding: 2em;
}

.hern-kiosk__cart-section-header-row {
   width: 100%;
}
.hern-kiosk__cart-section-checkout-text {
   text-align: center;
   span {
      font-size: 2.5em;
      font-weight: 700;
      letter-spacing: 0.12em;
   }
}
.hern-kiosk__cart-section-see-more-text {
   text-align: center;
   span {
      letter-spacing: 0.08em;
      font-size: 1.8em;
      text-transform: uppercase;
   }
}

.hern-kiosk__cart-cards-container {
   margin: 1em;
   box-shadow: 0px 1px 4px 2px rgba(209, 227, 245, 0.6);
   height: 100%;
}
.hern-kiosk__cart-cards-container-header {
   display: flex;
   justify-content: space-between;
   padding: 1em;
   font-size: 1.8em;
   font-weight: 500;
}
.hern-kiosk__cart-cards {
   &::-webkit-scrollbar {
      width: 6px;
   }
   &::-webkit-scrollbar-thumb {
      background: #e5f0f7;
      border-radius: 4px;
   }
}
.hern-kiosk__cart-card {
   display: flex;
   justify-content: space-between;
   align-items: center;
   box-shadow: 0px 1px 4px 2px #cfcfcf;
   padding: 1em 2em;
   min-height: 20em;
   margin: 2em 2em;
}
.hern-kiosk__cart-card-p-image {
   width: 25%;
}
.hern-kiosk__cart-card-p-mid {
   width: 60%;

   display: flex;
   margin: 0 2em;
   flex-direction: column;
   justify-content: space-between;
}
.hern-kiosk__cart-cards-price {
   font-size: 2.5em;
   color: #5a5a5a;
   font-weight: 700;
   text-align: end;
}
.hern-kiosk__cart-card-p-name {
   font-size: 2.5em;
   font-weight: 700;
}
.hern-kiosk__cart-card-p-details {
   margin: 0 0 2em 0;
}
.hern-kiosk__cart-card-actions {
   width: 20%;
   margin: 0 1em;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 10em;
}
.hern-kiosk__cart-card-action-buttons {
   display: flex;
   justify-content: flex-end;
}

.hern-kiosk__cart-page-footer {
   padding: 0;
   height: 35em;
}
.hern-kiosk__cart-page-offer {
   height: 11em;
   background: #ffffff;
}
.hern-kiosk__cart-page-price-detail {
   height: 15em;
}
.hern-kiosk__cart-page-proceed-to-checkout {
   height: 9em;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1em 2em;
}
.hern-kiosk-cart-bill-details {
   margin: 2em;
   > span {
      font-size: 2em;
      font-weight: 600;
   }
}
.hern-kiosk-cart-bill-details-list {
   li {
      display: flex;
      justify-content: space-between;
      font-style: normal;
      font-weight: normal;
      font-size: 1.5em;
      line-height: 1em;
      color: #555b6e;
      margin: 12px 0;
   }
}

.hern-kiosk-cart-product-modifiers {
   margin: 1em 0;
   border: 1px solid rgba(64, 64, 64, 0.25);
   box-sizing: border-box;
   border-radius: 6px;
   padding: 0 0.5em;
}
.hern-kiosk-cart-product-modifiers-heading {
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 16px;
}

.hern-kiosk-cart-product-modifiers-product-option {
   display: flex;
   justify-content: space-between;
   margin-left: 1em;
   > span {
      font-style: normal;
      font-weight: normal;
      font-size: 14px;
      line-height: 16px;
      color: #555b6e;
      margin: 10px 0;
   }
}
.hern-kiosk-cart-product-modifiers-list {
   ul {
      margin-left: 1em;
   }
   li {
      display: flex;
      justify-content: space-between;
      font-style: normal;
      font-weight: normal;
      font-size: 1.2em;
      line-height: 1em;
      color: #555b6e;
      margin: 0.6em 0;
   }
}
.hern-kiosk-cart-product-modifiers-heading {
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 16px;
}
.hern-kiosk__cart-place-order-btn {
   padding: 2em 2em;
   height: 2.5em;
   display: flex;
   align-items: center;
   .hern-kiosk__cart-place-order-btn-text {
      font-size: 1.5em;
      margin: 0 1em;
   }
   .hern-kiosk__cart-place-order-btn-total {
      font-size: 1.3em;
   }
}

